# open-parallel

./: .gitignore  AGENT.md  AGENTS_AS_APPS.md  CAPABILITY.toml  Cargo.toml  INSIGHT.md  INTEGRATION.md  README.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
tokio-crackle/: Cargo.toml  INTEGRATION.md  README.md
tokio-crackle/src/: information.rs  lib.rs  monitor.rs  phase.rs  report.rs
tokio-crackle/tests/: integration.rs
tokio/src/: deadline_executor.rs  lib.rs  spectral_scheduler.rs
